--- a/web/activities/testpaper/resources/views/show/index.html.twig
+++ b/web/activities/testpaper/resources/views/show/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
   {% set canStartTestpaper = (activity.startTime and activity.startTime < ('now'|date('U')) and activity.endTime > ('now'|date('U'))) or (activity.startTime and activity.startTime < ('now'|date('U')) and activity.endTime == '0') or (activity.startTime == '0' and activity.endTime == '0') %}
-  
+
   <div class="iframe-parent-content">
     <div class="modal show iframe-modal">
       <div class="modal-dialog">
@@ -106,7 +106,7 @@
                           {{ activity.startTime|date('Y/m/d H:i:s') }}
                           -
                           {{ 'course.plan_setup.finish_rule.indefinite.duration'|trans }}
-                        {% elseif activity.ext.validPeriodMode == '1' %}
+                        {% elseif activity.ext.validPeriodMode == '1' or activity.ext.validPeriodMode == '3' %}
                           {{ activity.startTime|date('Y/m/d H:i:s') }}
                           -
                           {{ activity.endTime|date('Y/m/d H:i:s') }}
