--- a/web/activities/testpaper/resources/views/create_or_update_content.html.twig
+++ b/web/activities/testpaper/resources/views/create_or_update_content.html.twig
@@ -214,7 +214,7 @@
               value="0"
               {% if activity.ext.validPeriodMode|default('0') == 0 %}checked="checked"{% endif %}
               {% if activity.ext.answerScene.start_time|default(0) > 0 %}
-                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s') and activity.courseStatus == 'published') %}disabled{% endif %}
+                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
               {% endif %}
             >
             {{ 'course.plan_task.activity_manage.exercise.default_difficulty'|trans }}
@@ -227,7 +227,7 @@
               value="1"
               {% if activity.ext.validPeriodMode|default('0') == 1 %}checked="checked"{% endif %}
               {% if activity.ext.answerScene.start_time|default(0) > 0 %}
-                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s') and activity.courseStatus == 'published') %}disabled{% endif %}
+                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
               {% endif %}
             >
             {{ 'course.plan_task.activity_manage.testpaper.mode.realTimeRange'|trans }}
@@ -240,7 +240,7 @@
               value="2"
               {% if activity.ext.validPeriodMode|default('0') == 2 %}checked="checked"{% endif %}
               {% if activity.ext.answerScene.start_time|default(0) > 0 %}
-                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s') and activity.courseStatus == 'published') %}disabled{% endif %}
+                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
               {% endif %}
             >
             {{ 'course.plan_task.activity_manage.testpaper.mode.startTime'|trans }}
@@ -253,7 +253,7 @@
               value="3"
               {% if activity.ext.validPeriodMode|default('0') == 3 %}checked="checked"{% endif %}
               {% if activity.ext.answerScene.start_time|default(0) > 0 %}
-                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s') and activity.courseStatus == 'published') %}disabled{% endif %}
+                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
               {% endif %}
             >
             {{ 'course.plan_task.activity_manage.testpaper.mode.fixedTimeInterval'|trans }}
@@ -263,17 +263,52 @@
           <input type="hidden" name="startTime" value="{% if activity.ext.answerScene.start_time|default(0) > 0 %}{{ activity.ext.answerScene.start_time|date('Y-m-d H:i:s') }}{% else %}0{% endif %}" size="25" >
           <input type="hidden" name="endTime" value="{% if activity.ext.answerScene.end_time|default(0) > 0 %}{{ activity.ext.answerScene.end_time|date('Y-m-d H:i:s') }}{% else %}0{% endif %}" size="25" >
         <div class="col-sm-offset-2 col-sm-10 controls">
-          <input type="{% if activity.ext.validPeriodMode|default('0') != 1 %}hidden{% else %}text{% endif %}" readonly  unselectable="on"
-            id="rangeTime" name="rangeTime" size="25" class="form-control js-realTimeRange-data testpaperTimeRange" autocomplete="off" style="width: 320px;">
+          <input
+            type="{% if activity.ext.validPeriodMode|default('0') != 1 %}hidden{% else %}text{% endif %}"
+            readonly
+            unselectable="on"
+            id="rangeTime"
+            name="rangeTime"
+            size="25"
+            class="form-control js-realTimeRange-data testpaperTimeRange"
+            autocomplete="off"
+            style="width: 320px;"
+            {% if activity.ext.answerScene.start_time|default(0) > 0 %}
+              {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
+            {% endif %}
+          >
         </div>
         <div class="col-sm-offset-2 col-sm-10 controls">
-          <input type="{% if activity.ext.validPeriodMode|default('0') != 2 %}hidden{% else %}text{% endif %}" readonly  unselectable="on"
-            size="25" id="rangeStartTime" name="rangeStartTime" class="form-control js-start-range testpaperTimeRange" style="width: 160px;" >
+          <input
+            type="{% if activity.ext.validPeriodMode|default('0') != 2 %}hidden{% else %}text{% endif %}"
+            readonly
+            unselectable="on"
+            size="25"
+            id="rangeStartTime"
+            name="rangeStartTime"
+            class="form-control js-start-range testpaperTimeRange"
+            style="width: 160px;"
+            {% if activity.ext.answerScene.start_time|default(0) > 0 %}
+              {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
+            {% endif %}
+          >
         </div>
         <div class="col-sm-offset-2 col-sm-10 controls" style="display: flex; flex-direction: column;">
           <div style="display: flex; align-items: center;">
-            <input type="{% if activity.ext.validPeriodMode|default('0') != 3 %}hidden{% else %}text{% endif %}" readonly  unselectable="on"
-                   id="rangeFixedTime" name="rangeFixedTime" size="25" class="form-control js-fixedTime-data testpaperTimeRange" autocomplete="off" style="width: 320px; margin-right: 12px">
+            <input
+              type="{% if activity.ext.validPeriodMode|default('0') != 3 %}hidden{% else %}text{% endif %}"
+              readonly
+              unselectable="on"
+              id="rangeFixedTime"
+              name="rangeFixedTime"
+              size="25"
+              class="form-control js-fixedTime-data testpaperTimeRange"
+              autocomplete="off"
+              style="width: 320px; margin-right: 12px"
+              {% if activity.ext.answerScene.start_time|default(0) > 0 %}
+                {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
+              {% endif %}
+            >
             <div class="js-test-duration" style="margin-right: 12px; margin-bottom: 10px"></div>
           </div>
           <div class="js-test-duration-tip" style="margin-top: 5px; font-size: 14px; font-weight: 400; line-height: 22px; color: #A1A1A1;">模拟考试时长必须 > 0</div>
