--- a/app/Resources/views/settings/password.html.twig
+++ b/app/Resources/views/settings/password.html.twig
@@ -20,14 +20,23 @@
         <label for="form_currentPassword">
           {{'user.settings.security.password_modify.current_password'|trans}}
         </label>
-        <input type="password" id="form_currentPassword" name="currentPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.current_password_placeholder'|trans}}">
+        <div style="position: relative">
+          <input type="password" id="form_currentPassword" name="currentPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.current_password_placeholder'|trans}}" style="padding-right: 25px">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-current-password-open-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-current-password-close-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: block"/>
+        </div>
       </div>
 
       <div class="form-group cd-form-group">
         <label for="form_newPassword">
           {{'user.settings.security.password_modify.new_password'|trans}}
-      </label>
-        <input type="password" id="form_newPassword" name="newPassword" required="required" class="form-control" placeholder="{{ 'user.settings.password_level.high'|trans }}">
+        </label>
+        <div style="position: relative">
+          <input type="password" id="form_newPassword" name="newPassword" required="required" class="form-control" placeholder="{{ 'user.settings.security.password_modify.new_password_placeholder'|trans }}" style="padding-right: 25px">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: block"/>
+        </div>
+        <div class="js-new-password-tip" style="font-size: 12px; line-height: 20px; margin-bottom: 10px">{{'user.settings.password_level.high'|trans}}</div>
       </div>
 
       <div class="form-group cd-form-group cd-mb24">
