--- a/app/Resources/views/admin-v2/user/user-manage/staff-manage/create-by-mobile-or-email-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/staff-manage/create-by-mobile-or-email-modal.html.twig
@@ -35,7 +35,11 @@
         <label for="password">{{'admin.user.fields.password_label'|trans}}</label>
       </div>
       <div class="col-md-7 controls">
-        <input type="password" id="password" name="password" class="form-control">
+        <div style="position: relative;">
+          <input type="password" id="password" name="password" class="form-control">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
+        </div>
         <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
       </div>
     </div>
