--- a/app/Resources/views/init-password/init-password.html.twig
+++ b/app/Resources/views/init-password/init-password.html.twig
@@ -13,15 +13,22 @@
         <div class="form-group mbl">
           <label class="control-label" for="newPassword">{{ 'user.register.password_label'|trans }}</label>
           <div class="controls">
-            <input class="form-control input-lg" id="newPassword" type="password" name="newPassword" value="" required="required"
-                   placeholder="{{ 'user.init.password_placeholder'|trans }}"/>
+            <div style="position: relative;">
+              <input class="form-control input-lg" id="newPassword" type="password" name="newPassword" value="" required="required" placeholder="{{ 'user.init.password_placeholder'|trans }}" style="padding-right: 30px"/>
+              <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: none"/>
+              <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: block"/>
+            </div>
             <div class="help-block"></div>
           </div>
         </div>
         <div class="form-group mbl">
           <label class="control-label" for="confirmPassword">{{ 'user.oauth.register.confirm_password_label'|trans }}</label>
           <div class="controls">
-            <input class="form-control input-lg" id="confirmPassword" type="password" name="confirmPassword" required="required" placeholder="{{ 'user.init.password_placeholder_again'|trans }}"/>
+            <div style="position: relative;">
+              <input class="form-control input-lg" id="confirmPassword" type="password" name="confirmPassword" required="required" placeholder="{{ 'user.init.password_placeholder_again'|trans }}"/>
+              <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: none"/>
+              <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: block"/>
+            </div>
           </div>
         </div>
 
