--- a/web/activities/testpaper/resources/views/create_or_update_content.html.twig
+++ b/web/activities/testpaper/resources/views/create_or_update_content.html.twig
@@ -309,13 +309,13 @@
                 {% if date("now") > date(activity.ext.answerScene.start_time|date('Y-m-d H:i:s')) and activity.courseStatus == 'published' %}disabled{% endif %}
               {% endif %}
             >
-            <div class="js-test-duration" style="margin-right: 12px; margin-bottom: 10px"></div>
+            <div class="js-fixed-time" style="margin-right: 12px; margin-bottom: 10px"></div>
           </div>
-          <div class="js-test-duration-tip" style="margin-top: 5px; font-size: 14px; font-weight: 400; line-height: 22px; color: #A1A1A1;">模拟考试时长必须 > 0</div>
+          <div class="js-fixed-time-tip" style="margin-top: 5px; font-size: 14px; font-weight: 400; line-height: 22px; color: #A1A1A1;">模拟考试时长必须 > 0</div>
         </div>
 			</div>
 
-      <div class="form-group js-test-duration-form-group">
+      <div class="form-group js-fixed-time-form-group">
         <div class="col-sm-2 control-label">
           <label for="length" {% if examMode == '0' %}class="control-label-required"{% endif %}>{{ 'course.plan_task.activity_manage.testpaper.time_limit'|trans }}</label></div>
         <div class="col-sm-10 controls radios">
