--- a/app/Resources/views/admin-v2/user/user-manage/change-password-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/change-password-modal.html.twig
@@ -31,7 +31,11 @@
     <div class="row form-group">
       <div class="col-md-3 control-label"><label for="newPassword">{{'admin.user.manage.change_password.new_password_label'|trans}}</label></div>
       <div class="col-md-8 controls">
-        <input class="form-control" type="password" id="newPassword" value="" name="newPassword">
+        <div style="position: relative;">
+          <input class="form-control" type="password" id="newPassword" value="" name="newPassword">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
+        </div>
         <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
       </div>
     </div>
@@ -39,8 +43,11 @@
     <div class="row form-group">
       <div class="col-md-3 control-label"><label for="confirmPassword">{{'admin.user.fields.confirm_password_label'|trans}}</label></div>
       <div class="col-md-8 controls">
-        <input class="form-control" type="password" id="confirmPassword" value=""
-               name="confirmPassword" data-explain="{{'admin.user.manage.change_password.input_data_explain.confirm_password'|trans}}">
+        <div style="position: relative;">
+          <input class="form-control" type="password" id="confirmPassword" value="" name="confirmPassword" data-explain="{{'admin.user.manage.change_password.input_data_explain.confirm_password'|trans}}">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
+        </div>
         <p class="help-block">{{'admin.user.fields.confirm_password_hint'|trans}}</p>
       </div>
     </div>
