--- a/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
@@ -34,8 +34,8 @@
       <div class="col-md-7 controls">
         <div style="position: relative;">
           <input type="password" id="password" name="password" class="form-control" style="padding-right: 30px">
-          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
-          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
         </div>
         <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
       </div>
@@ -46,7 +46,11 @@
         <label for="confirmPassword">{{'admin.user.fields.confirm_password_label'|trans}}</label>
       </div>
       <div class="col-md-7 controls">
-        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control">
+        <div style="position: relative">
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
+        </div>
         <p class="help-block">{{'admin.user.fields.confirm_password_hint'|trans}}</p>
       </div>
     </div>
