--- a/app/Resources/views/settings/password.html.twig
+++ b/app/Resources/views/settings/password.html.twig
@@ -43,7 +43,11 @@
         <label for="form_confirmPassword">
           {{'user.settings.security.password_modify.confirm_password'|trans}}
         </label>
-        <input type="password" id="form_confirmPassword" name="confirmPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.confirm_password_placeholder'|trans}}">
+        <div style="position: relative">
+          <input type="password" id="form_confirmPassword" name="confirmPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.confirm_password_placeholder'|trans}}">
+          <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: none"/>
+          <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: block"/>
+        </div>
       </div>
       <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     </form>
