--- a/app/Resources/views/task-manage/create-or-update-finish.html.twig
+++ b/app/Resources/views/task-manage/create-or-update-finish.html.twig
@@ -46,14 +46,13 @@
               {% if activity.mediaType == 'testpaper' %}
                 <div class="cd-radio-group mts">
                   {% for condition in conditions %}
-                    <label class="cd-radio {% if activity.finishType|default(defaultCondition.type) == condition.type|default() %}checked{% endif %}">
+                    <label class="cd-radio {% if activity.finishType|default(defaultCondition.type) == condition.type|default() %}checked{% endif %}" style="{% if not(canUpdate) and validPeriodMode == 3 %}cursor: not-allowed{% endif %}">
                       <input id="finish-type-select"
                              type="radio"
                              name="finishType"
                              value="{{ condition.type }}"
                              data-toggle="cd-radio"
                              {% if activity.finishType|default(defaultCondition.type) == condition.type|default() %}checked="checked"{% endif %}
-                             style="{% if not(canUpdate) and validPeriodMode == 3 %}cursor: not-allowed{% endif %}"
                              {% if not(canUpdate) and validPeriodMode == 3 %}disabled{% endif %}
                       >
                       {{ condition['describe']|default(selectTips[condition['type']]|default(''))|trans }}
