--- a/app/Resources/views/settings/password.html.twig
+++ b/app/Resources/views/settings/password.html.twig
@@ -44,7 +44,7 @@
           {{'user.settings.security.password_modify.confirm_password'|trans}}
         </label>
         <div style="position: relative">
-          <input type="password" id="form_confirmPassword" name="confirmPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.confirm_password_placeholder'|trans}}">
+          <input type="password" id="form_confirmPassword" name="confirmPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.confirm_password_placeholder'|trans}}" style="padding-right: 25px">
           <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: none"/>
           <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: block"/>
         </div>
