--- a/app/Resources/views/init-password/init-password.html.twig
+++ b/app/Resources/views/init-password/init-password.html.twig
@@ -18,7 +18,7 @@
               <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: none"/>
               <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 6px; top: 8px; cursor: pointer; display: block"/>
             </div>
-            <div class="help-block"></div>
+            <div class="help-block" style="margin-top: 0; line-height: 20px">请设置8-32位包含字母大小写、数字、符号四种字符组合成的密码</div>
           </div>
         </div>
         <div class="form-group mbl">
