--- a/web/activities/testpaper/resources/views/create_or_update_content.html.twig
+++ b/web/activities/testpaper/resources/views/create_or_update_content.html.twig
@@ -330,7 +330,7 @@
               style="width: 320px; margin-right: 24px"
               {% if not(canUpdate) and validPeriodMode == 3 %}disabled{% endif %}
             >
-            <div class="js-fixed-time" style="margin-right: 12px; margin-bottom: 10px"></div>
+            <div class="js-test-duration" style="margin-right: 12px; margin-bottom: 10px"></div>
           </div>
           <div class="js-fixed-time-tip" style="margin-top: 5px; font-size: 14px; font-weight: 400; line-height: 22px; color: #A1A1A1;"></div>
         </div>
