--- a/web/activities/testpaper/resources/views/show.html.twig
+++ b/web/activities/testpaper/resources/views/show.html.twig
@@ -6,7 +6,7 @@
 
   {% if activity.startTime and activity.startTime > ('now'|date('U')) %}
     {% include('@activity/testpaper/resources/views/show/index.html.twig') %}
-  {% elseif activity.endTime and activity.endTime < ('now'|date('U')) %}
+  {% elseif activity.endTime and activity.endTime < ('now'|date('U')) and activity.ext.validPeriodMode|default('0') != 3 %}
     {% include('@activity/testpaper/resources/views/show/index.html.twig') %}
   {% else %}
     {% if not latestAnswerRecord %}
