--- a/app/Resources/views/admin-v2/developer/developer-setting/index.html.twig
+++ b/app/Resources/views/admin-v2/developer/developer-setting/index.html.twig
@@ -242,6 +242,15 @@
 
   <div class="form-group">
     <div class="col-md-3 control-label">
+      <label>{{ 'admin.developer_setting.ai_signal_server'|trans }}</label>
+    </div>
+    <div class="controls col-md-8 radios">
+      <input class="form-control" type="text" name="ai_signal_server" value="{{ developerSetting.ai_signal_server|default('') }}">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-md-3 control-label">
       <label>{{ 'admin.developer_setting.push_api_server'|trans }}</label>
     </div>
     <div class="controls col-md-8 radios">
