feat: #20250811 考试练习显示题目类型

--- a/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
@@ -282,6 +282,12 @@
   .ant-form-item {
     margin-bottom: 0;
   }
+
+  .ibs-tab-container {
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .ibs-engine-material {
