feat: #112971 所有题目类型支持批量修改分值，比如多选题漏选分值隐藏的比较深，需要一个题目编辑后滑到底部点击高级编辑才能编辑操作非常繁琐复杂

--- a/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
@@ -216,6 +216,18 @@
     }
   }
 
+  .ibs-import-modal-form {
+    .missed-selection-score-item {
+      .missed-selection-score-tip-content {
+        font-size: 14px;
+      }
+      .missed-selection-score-tip-icon {
+        width: 16px;
+        height: 16px;
+      }
+    }
+  }
+
   .ibs-import-list-worng {
     border: 1px solid #FAAD14 !important;
     background: #FAAD14;
