--- a/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
@@ -218,12 +218,15 @@
 
   .ibs-import-modal-form {
     .missed-selection-score-item {
+      .missed-selection-score-item-label {
+        white-space: nowrap;
+        display: inline-flex;
+        align-items: center;
+        text-decoration: underline dashed #BFBFBF;
+        text-underline-offset: 4px;
+      }
       .missed-selection-score-tip-content {
         font-size: 14px;
-      }
-      .missed-selection-score-tip-icon {
-        width: 16px;
-        height: 16px;
       }
     }
   }
